# wvWare-Android

./: .gitattributes  .gitignore  README.md  UpcomingReleaseNotes.md  build.gradle  doChangeNDK  doclean  doclean-idea  doincrementversion  getVersion.sh  gradle.properties  settings.gradle
.github/: dependabot.yml  installBuildDependencies.sh  prepareSampleAppForUnpublishedLib.sh
.github/conan/profiles/: android-21-armv7  android-21-armv8  android-21-x86  android-21-x86_64
.github/conan/recipes/wvware/: config.yml
.github/conan/recipes/wvware/1.2.9/: conandata.yml  conanfile.py
.github/conan/recipes/wvware/1.2.9/patches/1.2.9-library/: wvWare-library.patch
.github/conan/recipes/wvware/1.2.9/patches/1.2.9-odr/: 0001-gsf-meta-names.patch  0002-C99-decls.patch  0003-format-security.patch  0004-gcc14-build-fix.patch
.github/conan/recipes/wvware/1.2.9/test_package/: CMakeLists.txt  test_package.c
.github/workflows/: appRelease.yml  build.yml  fullRelease.yml  incrementVersion.yml  manualVersionIncrement_major.yml  manualVersionIncrement_minor.yml  privilegedBuild.yml  release.yml  releasePublisher.yml  unprivilegedBuild.yml
application/app/: build.gradle
application/app/src/main/: AndroidManifest.xml
application/app/src/main/java/com/viliussutkus89/android/wvware/application/: AboutActivity.java  ConverterActivity.java  ConverterWorker.java  ConverterWorkerRemoteService.java  GetFileName.java  HTMLReaderActivity.java  MainActivity.java  SaveWorker.java  wvWareApplication.java
application/app/src/main/res/layout/: activity_main.xml
application/app/src/main/res/values/: strings.xml
application/app/src/main/res/xml/: provider_paths.xml
ci-scripts/: browser_tests.py  getVersion  incrementVersion  prepareLibraryTestsForStagingRepository  prepareSampleAppForStagingRepository  updateDownstreamVersion
ci-scripts/lib/: fileParser.pm  fileUpdater.pm  pathResolver.pm  repositoryInputParser.pm
dependency-builder/: build.gradle
dependency-builder/src/main/: AndroidManifest.xml
dependency-builder/src/main/cpp/: CMakeLists.txt  CompilerFlags.cmake  EPAutotools.cmake  EPCMake.cmake  EPHelpers.cmake  EPMeson.cmake  meson_cross_file.txt.in
gradle/wrapper/: gradle-wrapper.properties
licenseOnly/: .gitignore  build.gradle  settings.gradle
licenseOnly/FreeType/: build.gradle
licenseOnly/GLib/: build.gradle
licenseOnly/libgsf/: build.gradle
licenseOnly/libgsf/src/main/: AndroidManifest.xml
licenseOnly/libwmf/: build.gradle
licenseOnly/libwmf/src/main/: AndroidManifest.xml
licenseOnly/wvWare/: build.gradle
licenseOnly/wvWare-Android-dependency-tree/: build.gradle
licenseOnly/wvWare-Android-dependency-tree/src/main/: AndroidManifest.xml
licenseOnly/wvWare/src/main/: AndroidManifest.xml
sample-app/: .gitignore  build.gradle
sample-app/app/: build.gradle
sample-app/app/src/main/: AndroidManifest.xml
sample-app/app/src/main/java/com/viliussutkus89/android/wvware/sampleapp/: MainActivity.java
sample-app/app/src/main/res/layout/: activity_main.xml
sampleapp/: .gitignore  build.gradle
sampleapp/app/: build.gradle
sampleapp/app/src/main/: AndroidManifest.xml
sampleapp/app/src/main/java/com/viliussutkus89/android/wvware/sampleapp/: AboutActivity.java  ConverterActivity.java  ConverterWorker.java  ConverterWorkerRemoteService.java  GetFileName.java  HTMLReaderActivity.java  MainActivity.java  SaveWorker.java  wvWareApplication.java
sampleapp/app/src/main/res/layout/: activity_main.xml
sampleapp/app/src/main/res/values/: strings.xml
wvWare/: .gitignore  CMakeLists.txt  build.gradle  conanfile.py
wvWare/src/androidTest/assets/: TomTaschauer.doc  passwordProtected.doc
wvWare/src/androidTest/java/com/viliussutkus89/android/wvware/: ConversionTests.java  EncryptedDocTests.java  InstrumentedTests.java
wvWare/src/main/: AndroidManifest.xml
wvWare/src/main/cpp/: CCharGC.h  CMakeLists.txt  EnvVar.c  errorPrinter.h  wvWare-Android.cpp  wvWare.c
wvWare/src/main/java/com/viliussutkus89/android/wvware/: EnvVar.java  ImageEmbedder.java  LegacyCleanup.java  wvWare.java
